--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+oldStuff
 *.py[cod]
 
 # Distribution / packaging
-oldScripts/
+oldStuff
 .Python
 *.png
 
